# masterserver

./: Cargo.toml  LICENSE  README.md  config.toml
.github/workflows/: rust.yml
buildenv/: Dockerfile
latest-build/linux/: masterserver
src/: logger.rs  main.rs  servers.rs
src/config/: mod.rs  structs.rs
src/get/: mod.rs
src/post/: mod.rs
src/routes/: get.rs  mod.rs  post.rs
src/servers/: mod.rs  structs.rs
