[package]
name = "masterserver"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
toml = "0.5.9"
serde = { version = "1.0.147", features = ["derive"] }
serde_derive = "1.0.147"
serde_json = "1.0.89"
actix-web = "4.2.1"
actix-cors = "0.6.4"
futures-util = "0.3.25"
censor = "0.3.0"

[profile.release]
strip = true      # Automatically strip symbols from the binary
opt-level = "s"   # Optimize for size
lto = true        # Enable link time optimization
codegen-units = 1 # Maximize size reduction optimizations